# opencubicplayer

./: .gitignore  .gitmodules  AUTHORS  BUGS  CREDITS  Changelog  KEYBOARD_REMAPS  Makefile.in  README.Darwin  README.md  Rules.make.in  SUID  TODO  TODOmingw  X11-keymap  aclocal.m4  config.h.in  configure  configure.ac  crashreport.txt  no-curses.h  ocp-curses  ocp-sdl  ocp-sdl2  ocp-sdl3  ocp-vcsa  ocp-x11  ocp.ini.in  ocp.rdef  ocp.spec  submodules-check.sh  types.h  ultrafix.sh
asm_emu/: Makefile  test-x86.c  x86.h  x86_adc.h  x86_add.h  x86_and.h  x86_cmp.h  x86_dec.h  x86_div.h  x86_fadd.h  x86_faddp.h  x86_fcom.h  x86_fcomp.h  x86_fcompp.h  x86_fdiv.h  x86_fdivp.h  x86_fiadd.h  x86_fidiv.h  x86_fimul.h  x86_finit.h  x86_fistp.h  x86_fisub.h  x86_fisubr.h  x86_fld.h  x86_fldz.h  x86_fmul.h  x86_fmulp.h  x86_fst.h  x86_fstp.h  x86_fstsw.h  x86_fsub.h  x86_fsubp.h  x86_fsubr.h  x86_fsubrp.h  x86_fxch.h  x86_imul.h  x86_inc.h  x86_neg.h  x86_or.h  x86_pop.h  (+11 more)
boot/: Makefile  Makefile-static  compdate.c  console.c  console.h  kickload-unix.c  kickload-windows.c  kickload.c  plinkman.c  plinkman.h  plinkman_end.c  pmain.c  pmain.h  psetting.c  psetting.h  test  test.c
cpiface/: Makefile  Makefile-static  cpianal.c  cpichan.c  cpidots.c  cpiface-private.h  cpiface.c  cpiface.h  cpifontdebug.c  cpigraph.c  cpiinst.c  cpikeyhelp.c  cpikube.c  cpilinks.c  cpimsg.c  cpimvol.c  cpiphase.c  cpipic.c  cpipic.h  cpiptype.c  cpiptype.h  cpiscope.c  cpitext.c  cpitrack.c  fft.c  fft.h  gif.c  gif.h  jpeg.c  jpeg.h  mcpedit.c  mcpedit.h  png.c  png.h  tga.c  tga.h  vol.h  volctrl.c
desktop/: opencubicplayer-48x48.xpm  opencubicplayer.desktop.in  opencubicplayer.xml  opencubicplayer.xpm  opencubicplayer_mini.xpm
dev/: Makefile  Makefile-static  devigen.c  devigen.h  deviplay.c  deviplay.h  devisamp.c  devisamp.h  deviwave.c  deviwave.h  freq.c  imsdev.h  mchasm.c  mchasm.h  mchasm_test.c  mcp.c  mcp.h  mix.c  mix.h  mixasm.c  mixasm.h  mixclip.c  mixclip.h  player.c  player.h  plrasm.c  plrasm.h  postproc.c  postproc.h  ringbuffer.c  ringbuffer.h  sampler.c  sampler.h  smpman.c  smpman_asminc.c  smpman_asminctest.c
devp/: Makefile  Makefile-static  devpalsa.c  devpcoreaudio.c  devpdisk.c  devpnone.c  devposs.c  devpsdl-common.c  devpsdl.c  devpsdl2.c  devpsdl3.c
devs/: Makefile  devsnone.c  devsoss.c
devw/: Makefile  devwmix.c  devwmix.h  devwmixf.c  devwmixf.h  devwnone.c  dwmix.h  dwmixa.c  dwmixa.h  dwmixa_c.c  dwmixa_x86.c  dwmixa_x86_emu.c  dwmixfa.c  dwmixfa.h  dwmixfa_8087.c  dwmixfa_8087_emu.c  dwmixfa_c.c  dwmixqa.c  dwmixqa.h  dwmixqa_c.c  dwmixqa_x86.c  dwnone_asminc.c  test-dwmixa.c  test-dwmixfa.c  test-dwmixqa.c
doc/: Makefile  cmdline.txt  ocp.1.in  opencp.dox  opencp.dox.in
filesel/: Makefile  Makefile-static  adb.c  adb.h  adbmeta-test.c  adbmeta.c  adbmeta.h  arctar.c  arczip.c  cdrom.c  cdrom.h  charsets.c  charsets.h  cphlpfs.c  cphlpfs.h  dirdb-test.c  dirdb.c  dirdb.h  download.c  download.h  filesystem-ancient.cpp  filesystem-ancient.h  filesystem-bzip2-test.c  filesystem-bzip2.c  filesystem-bzip2.h  filesystem-dir-mem.c  filesystem-dir-mem.h  filesystem-drive.c  filesystem-drive.h  filesystem-file-dev.c  filesystem-file-dev.h  filesystem-file-mem.c  filesystem-file-mem.h  filesystem-filehandle-cache-test.c  filesystem-filehandle-cache.c  filesystem-filehandle-cache.h  filesystem-gzip-test.c  filesystem-gzip.c  filesystem-gzip.h  filesystem-pak.c  (+56 more)
goodies/: Makefile
haiku/: ocp.rdef.in
help/: Makefile  Makefile-static  cphelper.c  cphelper.h  cphlpif.c
m4/: sdl2.m4
medialib/: Makefile  Makefile-static  medialib-add.c  medialib-listall.c  medialib-refresh.c  medialib-remove.c  medialib-scan.c  medialib-search.c  medialib.c
mingw/: Makefile  Makefile-static  build.sh  ocp.rc.in  versionscheck.sh  versionsconf.sh
playay/: Makefile  aychan.c  ayplay.c  ayplay.h  aypplay.c  aytype.c  aytype.h  cbops.c  driver.h  dumpay.c  dumpay_z80_dis.c  edops.c  main.c  main.h  portmap.txt  sound.c  sound.h  z80.c  z80.h  z80ops.c
playcda/: Makefile  cdaplay.c  cdapplay.c  cdatype.c  cdatype.h  cdaudio.h
playflac/: Makefile  cpiflacinfo.c  cpiflacpic.c  flacplay.c  flacplay.h  flacpplay.c  flacptype.c  flactest.c  flactype.c  flactype.h
playgmd/: Makefile  dumps3m.c  dumpstm.c  gmdinst.h  gmdl669.c  gmdlams-v1.c  gmdlams-v2.c  gmdlams.c  gmdldmf.c  gmdlmdl.c  gmdlmtm.c  gmdlokt.c  gmdlptm.c  gmdls3m.c  gmdlstm.c  gmdlult.c  gmdpchan.c  gmdpchan.h  gmdpdots.c  gmdpdots.h  gmdpinst.c  gmdplay.c  gmdplay.h  gmdpplay.c  gmdptrak.c  gmdptrak.h  gmdptype.c  gmdrtns.c  gmdtime.c  gmdtype.c  gmdtype.h
playgme/: Makefile  cpiinfo.c  gmeplay.c  gmeplay.h  gmepplay.c  gmetype.c  gmetype.h
playgmi/: Makefile  cpitimiditysetup.c  cpitimiditysetup.h  dumpfff.c  dumpmidi.c  dumppat.c  dumpsf2.c  generate-test.c  gmifff-internals.h  gmifff.c  gmifreepats.c  gmiinit.c  gmiload.c  gmipat.c  gmipat.h  gmipchan.c  gmipdots.c  gmipinst.c  gmiplay.c  gmiplay.h  gmipplay.c  gmiptype.c  gmisf2.c  gmisf2.h  gmitimidity.c  gmiultra.c  interface.h  ocp-output.c  parser.c  timiditypchan.c  timidityplay.c  timidityplay.h  timiditypplay.c
playhvl/: Makefile  dumpahx.c  hvl_genwaves.inc.c  hvlpchan.c  hvlpchan.h  hvlpdots.c  hvlpdots.h  hvlpinst.c  hvlpinst.h  hvlplay.c  hvlplay.h  hvlpplay.c  hvlptrak.c  hvlptrak.h  hvlptype.c  hvltype.c  hvltype.h  loader.c  loader.h  player.c  player.h
playit/: Makefile  itchan.c  itchan.h  itload.c  itpinst.c  itplay.c  itplay.h  itpplay.c  itpptype.c  itptrack.c  itrtns.c  itsex.c  ittime.c  ittype.c  ittype.h
playmp2/: Makefile  charset.c  charset.h  cpiid3info.c  cpiid3pic.c  dumpid3.c  id3.c  id3.h  id3jpeg.c  id3jpeg.h  id3png.c  id3png.h  mpplay.c  mpplay.h  mppplay.c  mpptype.c  mptype.c  mptype.h
playogg/: Makefile  cpiogginfo.c  cpioggpic.c  oggplay.c  oggplay.h  oggpplay.c  oggtype.c  oggtype.h
playopl/: Makefile  ocpemu.cpp  ocpemu.h  oplKen.cpp  oplKen.h  oplNuked.cpp  oplNuked.h  oplRetroWave-helperthread.cpp  oplRetroWave-serialization.cpp  oplRetroWave.cpp  oplRetroWave.h  oplSatoh.cpp  oplSatoh.h  oplWoody.cpp  oplplay.h  (+11 more)
(+247 files in other folders)
